// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`my DataViewLanguagesMobile component data length <= 3 should renders properly  1`] = `
<div
  className="DataViewLanguagesMobile left "
>
  <img
    alt="ellipse"
    className="ellipse"
  />
  <div
    className="innerVector"
  />
  <div
    className="info__title"
  >
    Languages
  </div>
  <div
    className="info__content"
  >
    <div
      className="item"
      key="english"
      style={
        Object {
          "backgroundColor": undefined,
        }
      }
    >
      english
    </div>
    <div
      className="item"
      key="french"
      style={
        Object {
          "backgroundColor": undefined,
        }
      }
    >
      french
    </div>
  </div>
</div>
`;

exports[`my DataViewLanguagesMobile component data length > 3 should renders properly  1`] = `
<div
  className="DataViewLanguagesMobile left "
>
  <img
    alt="ellipse"
    className="ellipse"
  />
  <div
    className="innerVector"
  />
  <div
    className="info__title"
  >
    Languages
  </div>
  <div
    className="info__content"
  >
    <div
      className="item"
      key="english"
      style={
        Object {
          "backgroundColor": undefined,
        }
      }
    >
      english
    </div>
    <div
      className="item"
      key="french"
      style={
        Object {
          "backgroundColor": undefined,
        }
      }
    >
      french
    </div>
    <div
      className="item"
      key="german"
      style={
        Object {
          "backgroundColor": undefined,
        }
      }
    >
      german
    </div>
    <div
      className="item"
      key="polish"
      style={
        Object {
          "backgroundColor": undefined,
        }
      }
    >
      polish
    </div>
  </div>
</div>
`;
